@@ -60,6 +60,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + patch #2745215 [edit] Multi-row change with "]" improved, 
   thanks to Virsacer - virsacer 
 + rfe #2657696 Automatically copy generated password
+- bug #2787162 [interface] Table with name 'log_views' is incorrectly displayed as a view
 
 3.1.5.0 (not yet released)
 - patch #2739001 [export] XML does not allow spaces in element names, 
@@ -69,6 +70,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug [calendar] js error "window.parent.addEvent is not a function" 
 - patch #2773818 [export] Invalid "Content-Encoding" header,
   thanks to abignale - abignale
+- bug #2787162 [interface] Table with name 'log_views' is incorrectly displayed as a view
 
 3.1.4.0 (2009-04-25)
 + patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
